@@ -1,6 +1,0 @@
-// Action when button add is clicked
-function addItem() {
-	// Get the add pill controller
-	var winAddPill = Alloy.createController('addPill').getView();
-	winAddPill.open();
-}
