@@ -1,16 +1,0 @@
-"#navView": {
-	height: 44,
-	backgroundColor: Alloy.Globals.navBgColor
-},
-"#lblTitle": {
-	color: Alloy.Globals.navTitleColor,
-	font: {
-		fontSize: 20,
-		fontWeight: 'bold'
-	}
-},
-"#btnAddPill": {
-	right: 5,
-	width: 36,
-	height: 36
-}
