@@ -1,6 +1,0 @@
-<Alloy>
-	<View id="navView" top="0">
-		<Label id="lblTitle" text="L('your_pills')" />
-		<Button id="btnAddPill" top="5" title="+" onClick="addItem" />
-	</View>
-</Alloy>
