@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <string name="general_info">¿Te tienes que tomar una medicina cada ciertos días y nunca recuerdas si te toca hoy?\n\nPasti te ayuda a recordar qué días de la semana te toca tomar tu medicina. Solo tienes que indicar qué día empezaste a tomar la medicina y cada cuántos días tienes que tomarla y ¡ya está!\nNo se añaden datos al calendario ni a los recordatorios, es una aplicación solo para consulta.\n\nCreada por Manuel Conde Vendrell para su propio uso, pero quizá pueda ayudarte.</string>
-    <string name="Your_pills">Tus pastillas</string>
-    <string name="add_pill">Añadir Pastilla</string>
+    <string name="your_pills">Tus pastillas</string>
+    <string name="add_pill">Añadir</string>
+    <string name="YES">SI</string>
+    <string name="NO">NO</string>
     
     <string name="back">Volver</string>
     <string name="pill_name">Nombre</string>
@@ -11,6 +13,7 @@
     <string name="add">Añadir</string>
     <string name="fill_all_fields">Por favor, rellene todos los campos.</string>
     
+	<string name="delete">Borrar</string>
     <string name="first_day_take">Primer día de toma</string>
     <string name="days_for_next_take">Días para la próxima toma</string>
     <string name="today_is">Hoy</string>
