@@ -1,1 +1,3 @@
-Place your change log text here.  This file will be incorporated with your app at package time.
+Database build:
+
+CREATE TABLE pills (id INTEGER PRIMARY KEY, name TEXT, first_take TEXT, interval NUMERIC);
